Complete Phase 3: Implement MCP RAG server with Qdrant and Mem0 integration
- Add comprehensive MCP tools for document and memory management
- Implement Qdrant service for vector search and document storage
- Add Mem0 service for memory management with conversation history
- Create document and memory resources with proper validation
- Add integration tests for Phase 3 tools
- Update system architecture and troubleshooting documentation
- Enhance Docker configuration for production deployment
- Add validation schemas using Zod for data integrity

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,7 +16,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy source code
 COPY src/ ./src/
-COPY run_server_http.py .
+COPY src/run_server_http.py ./run_server_http.py
 COPY .env .
 
 # Create directory for mem0 data
