feat: Prepare project for publication - v1.0.0
- Update README.md with comprehensive project overview and status
- Update pyproject.toml to v1.0.0 with production-ready configuration
- Add MIT LICENSE file
- Clean up temporary files and cache directories
- Update .gitignore with comprehensive patterns
- Update .env.example with all configuration options
- All phases completed (1-6) with 183/183 tests passing
- Project ready for production deployment

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,38 @@ docker/.env
 # Temporary files
 *.tmp
 *.temp
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Performance and benchmark files
+benchmark_results_*.json
+performance_*.json
+unit-test-results.txt
+
+# Documentation build
+docs/_build/
+docs/.doctrees/
+
+# Jupyter Notebooks
+.ipynb_checkpoints/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Rope project settings
+.ropeproject/
+
+# SpecStory history
+.specstory/
+
+# Cursor IDE
+.cursor/
+.cursorindexingignore
+.cursorignore
