--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,41 @@
+# MCP RAG Server Configuration
+# Copy this file to .env and fill in your actual values
+
 # Gemini API Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
-GEMINI_MODEL=gemini-2.0-flash-exp
-GEMINI_EMBEDDING_MODEL=text-embedding-004
-GEMINI_MAX_TOKENS=4096
-GEMINI_TEMPERATURE=0.7
 
-# Qdrant Configuration (Local Docker - no API key needed)
-QDRANT_URL=http://localhost:6333
-COLLECTION_NAME=documents
-VECTOR_SIZE=768
+# Qdrant Configuration
+QDRANT_HOST=localhost
+QDRANT_PORT=6333
+QDRANT_COLLECTION_NAME=mcp_rag_documents
 
-# Mem0 Configuration (Open Source - no API key needed)
-MEM0_LOCAL_STORAGE_PATH=./mem0_data
-MEM0_MEMORY_SIZE=1000
-MEM0_RELEVANCE_THRESHOLD=0.7
-MEM0_MAX_TOKENS_PER_MEMORY=1000
+# Mem0 Configuration
+MEM0_HOST=localhost
+MEM0_PORT=8080
+MEM0_API_KEY=your_mem0_api_key_here
 
 # Server Configuration
-MCP_SERVER_HOST=localhost
-MCP_SERVER_PORT=8000
-LOG_LEVEL=INFO
-DEBUG=false
+SERVER_HOST=localhost
+SERVER_PORT=8000
+SERVER_LOG_LEVEL=INFO
+
+# Data Storage Configuration
+DATA_DIR=./data
+MEM0_DATA_DIR=./data/mem0_data
+SESSION_DATA_DIR=./data/session_data
+
+# Performance Configuration
+MAX_CONCURRENT_REQUESTS=10
+REQUEST_TIMEOUT=30
+MEMORY_CACHE_SIZE=1000
+
+# AI Reasoning Configuration
+REASONING_MAX_STEPS=5
+REASONING_CONFIDENCE_THRESHOLD=0.7
+CONTEXT_MAX_DEPTH=5
+CONTEXT_CONFIDENCE_THRESHOLD=0.6
+
+# Session Configuration
+SESSION_TIMEOUT=3600
+MAX_SESSIONS_PER_USER=10
+SESSION_CLEANUP_INTERVAL=300
