--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,10 +14,11 @@ services:
     restart: unless-stopped
     healthcheck:
       test:
-        ["CMD-SHELL", "timeout 5 bash -c '</dev/tcp/localhost/6333' || exit 1"]
-      interval: 30s
-      timeout: 10s
+        ["CMD-SHELL", "timeout 3 bash -c '</dev/tcp/localhost/6333' || exit 1"]
+      interval: 10s
+      timeout: 5s
       retries: 3
+      start_period: 15s
 
   mcp-rag-server:
     build:
