--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,24 +4,28 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mcp-rag-server"
-version = "0.1.0"
-description = "MCP RAG Server with Qdrant, mem0, and Gemini API"
+version = "1.0.0"
+description = "Production-ready MCP RAG Server with advanced AI reasoning, memory management, and comprehensive MCP integration"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
-    {name = "RAG Team", email = "team@example.com"}
+    {name = "MCP RAG Team", email = "team@mcp-rag.dev"}
 ]
-keywords = ["mcp", "rag", "qdrant", "mem0", "gemini", "ai"]
+keywords = ["mcp", "rag", "qdrant", "mem0", "gemini", "ai", "reasoning", "memory", "vector-search"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Text Processing :: Linguistic",
+    "Topic :: Database :: Database Engines/Servers",
 ]
 
 dependencies = [
@@ -45,6 +49,7 @@ dependencies = [
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.0.0",
     "black>=23.0.0",
     "isort>=5.12.0",
     "mypy>=1.0.0",
@@ -54,22 +59,28 @@ dev = [
 [project.scripts]
 mcp-rag-server = "mcp_rag_server.server:main"
 
+[project.urls]
+Homepage = "https://github.com/your-org/mcp-rag-server"
+Documentation = "https://github.com/your-org/mcp-rag-server/docs"
+Repository = "https://github.com/your-org/mcp-rag-server.git"
+Issues = "https://github.com/your-org/mcp-rag-server/issues"
+
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ['py311']
 
 [tool.isort]
 profile = "black"
 multi_line_output = 3
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py311"
 line-length = 88
 select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
 ignore = ["E501", "B008"]
@@ -80,3 +91,4 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 asyncio_mode = "auto"
+addopts = "-v --tb=short"
