feat: implement project isolation and fix MCP RAG tools
- Add project isolation configuration with collection prefixes and namespaces
- Add missing methods to QdrantService: list_documents, get_document_stats
- Add missing methods to Mem0Service: get_memories, get_relevant_memories, clear_memories
- Update Docker Compose with new environment variables
- Add comprehensive documentation for project isolation
- Fix validation schemas to use configurable default user ID
- Improve error handling and logging in services

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,8 +30,11 @@ services:
     environment:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - QDRANT_URL=http://qdrant:6333
+      - QDRANT_COLLECTION_PREFIX=${QDRANT_COLLECTION_PREFIX:-}
       - MEM0_SELF_HOSTED=true
       - MEM0_LOCAL_STORAGE_PATH=/app/mem0_data
+      - MEM0_PROJECT_NAMESPACE=${MEM0_PROJECT_NAMESPACE:-}
+      - MEM0_DEFAULT_USER_ID=${MEM0_DEFAULT_USER_ID:-default}
       - FASTMCP_HOST=0.0.0.0
       - FASTMCP_PORT=8001
       - LOG_LEVEL=INFO
