feat: unify environment variables under MCP_ prefix
- Update all environment variables to use MCP_ prefix for consistency
- Replace GEMINI_API_KEY with MCP_GEMINI_API_KEY
- Replace QDRANT_COLLECTION_PREFIX with MCP_COLLECTION
- Replace MEM0_PROJECT_NAMESPACE with MCP_PROJECT_NAMESPACE
- Replace MEM0_DEFAULT_USER_ID with MCP_USER_ID
- Remove FASTMCP_PORT and FASTMCP_HOST (not needed for FastMCP)
- Update MCP_SERVER_PORT and MCP_SERVER_HOST
- Update all Docker Compose files with new variable names
- Update Cursor mcp.json configuration with unified variables
- Update .env.example with new variable structure
- Add comprehensive migration guide and documentation
- Update project management script to use new variables
- Improve configuration consistency and readability
- Simplify variable naming for better maintainability

--- a/.env.example.backup2
+++ b/.env.example.backup2
@@ -5,25 +5,25 @@
 # GEMINI API CONFIGURATION
 # =============================================================================
 # Required: Your Gemini API key from Google AI Studio
-MCP_GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # Optional Gemini settings (with defaults)
-MCP_GEMINI_MODEL=gemini-2.0-flash-exp
-MCP_GEMINI_EMBEDDING_MODEL=text-embedding-004
-MCP_GEMINI_MAX_TOKENS=4096
-MCP_GEMINI_TEMPERATURE=0.7
+GEMINI_MODEL=gemini-2.0-flash-exp
+GEMINI_EMBEDDING_MODEL=text-embedding-004
+GEMINI_MAX_TOKENS=4096
+GEMINI_TEMPERATURE=0.7
 
 # =============================================================================
 # QDRANT VECTOR DATABASE CONFIGURATION
 # =============================================================================
 # Qdrant connection settings
-MCP_QDRANT_URL=http://localhost:6333
+QDRANT_URL=http://localhost:6333
 
 # Collection settings
-MCP_COLLECTION_NAME=documents
-MCP_COLLECTION=
-MCP_VECTOR_SIZE=768
-MCP_QDRANT_DISTANCE_METRIC=Cosine
+QDRANT_COLLECTION_NAME=documents
+QDRANT_COLLECTION_PREFIX=
+QDRANT_VECTOR_SIZE=768
+QDRANT_DISTANCE_METRIC=Cosine
 
 # Qdrant service ports (for Docker)
 QDRANT_SERVICE_HTTP_PORT=6333
@@ -33,25 +33,25 @@ QDRANT_SERVICE_GRPC_PORT=6334
 # MEM0 MEMORY LAYER CONFIGURATION
 # =============================================================================
 # Local storage settings
-MCP_MEM0_STORAGE_PATH=./data/mem0_data
-MCP_MEM0_SELF_HOSTED=true
+MEM0_LOCAL_STORAGE_PATH=./data/mem0_data
+MEM0_SELF_HOSTED=true
 
 # Project isolation settings
-MCP_PROJECT_NAMESPACE=
-MCP_USER_ID=default
+MEM0_PROJECT_NAMESPACE=
+MEM0_DEFAULT_USER_ID=default
 
 # Memory settings
-MCP_MEM0_MEMORY_SIZE=1000
-MCP_MEM0_RELEVANCE_THRESHOLD=0.7
-MCP_MEM0_MAX_TOKENS_PER_MEMORY=1000
+MEM0_MEMORY_SIZE=1000
+MEM0_RELEVANCE_THRESHOLD=0.7
+MEM0_MAX_TOKENS_PER_MEMORY=1000
 
 # Memory search settings
-MCP_MEM0_USE_SEMANTIC_SEARCH=true
-MCP_MEM0_SEMANTIC_SEARCH_WEIGHT=0.7
-MCP_MEM0_KEYWORD_SEARCH_WEIGHT=0.3
-MCP_MEM0_RECENCY_WEIGHT=0.1
-MCP_MEM0_MAX_MEMORY_CONTEXT_LENGTH=2000
-MCP_MEM0_ENABLE_MEMORY_SUMMARIZATION=true
+MEM0_USE_SEMANTIC_SEARCH=true
+MEM0_SEMANTIC_SEARCH_WEIGHT=0.7
+MEM0_KEYWORD_SEARCH_WEIGHT=0.3
+MEM0_RECENCY_WEIGHT=0.1
+MEM0_MAX_MEMORY_CONTEXT_LENGTH=2000
+MEM0_ENABLE_MEMORY_SUMMARIZATION=true
 
 # =============================================================================
 # MCP SERVER CONFIGURATION
@@ -60,9 +60,13 @@ MCP_MEM0_ENABLE_MEMORY_SUMMARIZATION=true
 MCP_SERVER_HOST=localhost
 MCP_SERVER_PORT=8000
 
+# FastMCP settings (for HTTP server)
+FASTMCP_HOST=0.0.0.0
+FASTMCP_PORT=8001
+
 # Logging and debugging
-MCP_LOG_LEVEL=INFO
-MCP_DEBUG=false
+LOG_LEVEL=INFO
+DEBUG=false
 
 # Session management
 MCP_SESSION_TIMEOUT_HOURS=24
@@ -76,19 +80,19 @@ MCP_ENABLE_SESSION_TRACKING=true
 # Example configurations for different projects:
 
 # Web Development Project
-# MCP_COLLECTION=web_dev
-# MCP_PROJECT_NAMESPACE=web_development
-# MCP_USER_ID=web_dev_team
+# QDRANT_COLLECTION_PREFIX=web_dev
+# MEM0_PROJECT_NAMESPACE=web_development
+# MEM0_DEFAULT_USER_ID=web_dev_team
 
 # Mobile App Project
-# MCP_COLLECTION=mobile_app
-# MCP_PROJECT_NAMESPACE=mobile_development
-# MCP_USER_ID=mobile_dev_team
+# QDRANT_COLLECTION_PREFIX=mobile_app
+# MEM0_PROJECT_NAMESPACE=mobile_development
+# MEM0_DEFAULT_USER_ID=mobile_dev_team
 
 # Client-Specific Project
-# MCP_COLLECTION=client_acme
-# MCP_PROJECT_NAMESPACE=acme_corp
-# MCP_USER_ID=acme_team
+# QDRANT_COLLECTION_PREFIX=client_acme
+# MEM0_PROJECT_NAMESPACE=acme_corp
+# MEM0_DEFAULT_USER_ID=acme_team
 
 # =============================================================================
 # PERFORMANCE AND ADVANCED SETTINGS
