--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,44 +26,42 @@ services:
       dockerfile: docker/Dockerfile
     container_name: mcp-rag-server
     ports:
-      - "${FASTMCP_PORT:-8001}:${FASTMCP_PORT:-8001}"
+      - "${MCP_SERVER_PORT:-8001}:${MCP_SERVER_PORT:-8001}"
     environment:
       # Gemini API Configuration
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - GEMINI_MODEL=${GEMINI_MODEL:-gemini-2.0-flash-exp}
-      - GEMINI_EMBEDDING_MODEL=${GEMINI_EMBEDDING_MODEL:-text-embedding-004}
-      - GEMINI_MAX_TOKENS=${GEMINI_MAX_TOKENS:-4096}
-      - GEMINI_TEMPERATURE=${GEMINI_TEMPERATURE:-0.7}
+      - MCP_GEMINI_API_KEY=${MCP_GEMINI_API_KEY}
+      - MCP_GEMINI_MODEL=${MCP_GEMINI_MODEL:-gemini-2.0-flash-exp}
+      - MCP_GEMINI_EMBEDDING_MODEL=${MCP_GEMINI_EMBEDDING_MODEL:-text-embedding-004}
+      - MCP_GEMINI_MAX_TOKENS=${MCP_GEMINI_MAX_TOKENS:-4096}
+      - MCP_GEMINI_TEMPERATURE=${MCP_GEMINI_TEMPERATURE:-0.7}
 
       # Qdrant Configuration
-      - QDRANT_URL=${QDRANT_URL:-http://qdrant:6333}
-      - QDRANT_COLLECTION_NAME=${QDRANT_COLLECTION_NAME:-documents}
-      - QDRANT_COLLECTION_PREFIX=${QDRANT_COLLECTION_PREFIX:-}
-      - QDRANT_VECTOR_SIZE=${QDRANT_VECTOR_SIZE:-768}
-      - QDRANT_DISTANCE_METRIC=${QDRANT_DISTANCE_METRIC:-Cosine}
+      - MCP_QDRANT_URL=${MCP_QDRANT_URL:-http://qdrant:6333}
+      - MCP_COLLECTION_NAME=${MCP_COLLECTION_NAME:-documents}
+      - MCP_COLLECTION=${MCP_COLLECTION:-}
+      - MCP_VECTOR_SIZE=${MCP_VECTOR_SIZE:-768}
+      - MCP_QDRANT_DISTANCE_METRIC=${MCP_QDRANT_DISTANCE_METRIC:-Cosine}
 
       # Mem0 Configuration
-      - MEM0_SELF_HOSTED=${MEM0_SELF_HOSTED:-true}
-      - MEM0_LOCAL_STORAGE_PATH=${MEM0_LOCAL_STORAGE_PATH:-/app/mem0_data}
-      - MEM0_PROJECT_NAMESPACE=${MEM0_PROJECT_NAMESPACE:-}
-      - MEM0_DEFAULT_USER_ID=${MEM0_DEFAULT_USER_ID:-default}
-      - MEM0_MEMORY_SIZE=${MEM0_MEMORY_SIZE:-1000}
-      - MEM0_RELEVANCE_THRESHOLD=${MEM0_RELEVANCE_THRESHOLD:-0.7}
-      - MEM0_MAX_TOKENS_PER_MEMORY=${MEM0_MAX_TOKENS_PER_MEMORY:-1000}
-      - MEM0_USE_SEMANTIC_SEARCH=${MEM0_USE_SEMANTIC_SEARCH:-true}
-      - MEM0_SEMANTIC_SEARCH_WEIGHT=${MEM0_SEMANTIC_SEARCH_WEIGHT:-0.7}
-      - MEM0_KEYWORD_SEARCH_WEIGHT=${MEM0_KEYWORD_SEARCH_WEIGHT:-0.3}
-      - MEM0_RECENCY_WEIGHT=${MEM0_RECENCY_WEIGHT:-0.1}
-      - MEM0_MAX_MEMORY_CONTEXT_LENGTH=${MEM0_MAX_MEMORY_CONTEXT_LENGTH:-2000}
-      - MEM0_ENABLE_MEMORY_SUMMARIZATION=${MEM0_ENABLE_MEMORY_SUMMARIZATION:-true}
+      - MCP_MEM0_SELF_HOSTED=${MCP_MEM0_SELF_HOSTED:-true}
+      - MCP_MEM0_STORAGE_PATH=${MCP_MEM0_STORAGE_PATH:-/app/mem0_data}
+      - MCP_PROJECT_NAMESPACE=${MCP_PROJECT_NAMESPACE:-}
+      - MCP_USER_ID=${MCP_USER_ID:-default}
+      - MCP_MEM0_MEMORY_SIZE=${MCP_MEM0_MEMORY_SIZE:-1000}
+      - MCP_MEM0_RELEVANCE_THRESHOLD=${MCP_MEM0_RELEVANCE_THRESHOLD:-0.7}
+      - MCP_MEM0_MAX_TOKENS_PER_MEMORY=${MCP_MEM0_MAX_TOKENS_PER_MEMORY:-1000}
+      - MCP_MEM0_USE_SEMANTIC_SEARCH=${MCP_MEM0_USE_SEMANTIC_SEARCH:-true}
+      - MCP_MEM0_SEMANTIC_SEARCH_WEIGHT=${MCP_MEM0_SEMANTIC_SEARCH_WEIGHT:-0.7}
+      - MCP_MEM0_KEYWORD_SEARCH_WEIGHT=${MCP_MEM0_KEYWORD_SEARCH_WEIGHT:-0.3}
+      - MCP_MEM0_RECENCY_WEIGHT=${MCP_MEM0_RECENCY_WEIGHT:-0.1}
+      - MCP_MEM0_MAX_MEMORY_CONTEXT_LENGTH=${MCP_MEM0_MAX_MEMORY_CONTEXT_LENGTH:-2000}
+      - MCP_MEM0_ENABLE_MEMORY_SUMMARIZATION=${MCP_MEM0_ENABLE_MEMORY_SUMMARIZATION:-true}
 
       # MCP Server Configuration
       - MCP_SERVER_HOST=${MCP_SERVER_HOST:-localhost}
-      - MCP_SERVER_PORT=${MCP_SERVER_PORT:-8000}
-      - FASTMCP_HOST=${FASTMCP_HOST:-0.0.0.0}
-      - FASTMCP_PORT=${FASTMCP_PORT:-8001}
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-      - DEBUG=${DEBUG:-false}
+      - MCP_SERVER_PORT=${MCP_SERVER_PORT:-8001}
+      - MCP_LOG_LEVEL=${MCP_LOG_LEVEL:-INFO}
+      - MCP_DEBUG=${MCP_DEBUG:-false}
       - MCP_SESSION_TIMEOUT_HOURS=${MCP_SESSION_TIMEOUT_HOURS:-24}
       - MCP_MAX_SESSIONS_PER_USER=${MCP_MAX_SESSIONS_PER_USER:-10}
       - MCP_SESSION_CLEANUP_INTERVAL_MINUTES=${MCP_SESSION_CLEANUP_INTERVAL_MINUTES:-5}
