--- a/docker/docker-compose.web-dev.yml
+++ b/docker/docker-compose.web-dev.yml
@@ -26,7 +26,7 @@ services:
       dockerfile: docker/Dockerfile
     container_name: mcp-rag-server-web-dev
     ports:
-      - "8001:8001"
+      - "8001:8000"
     environment:
       # Gemini API Configuration
       - MCP_GEMINI_API_KEY=${MCP_GEMINI_API_KEY}
@@ -58,8 +58,8 @@ services:
       - MCP_MEM0_ENABLE_MEMORY_SUMMARIZATION=${MCP_MEM0_ENABLE_MEMORY_SUMMARIZATION:-true}
       
       # MCP Server Configuration
-      - MCP_SERVER_HOST=${MCP_SERVER_HOST:-localhost}
-      - MCP_SERVER_PORT=${MCP_SERVER_PORT:-8001}
+      - MCP_SERVER_HOST=${MCP_SERVER_HOST:-0.0.0.0}
+      - MCP_SERVER_PORT=${MCP_SERVER_PORT:-8000}
       - MCP_LOG_LEVEL=${MCP_LOG_LEVEL:-INFO}
       - MCP_DEBUG=${MCP_DEBUG:-false}
       - MCP_SESSION_TIMEOUT_HOURS=${MCP_SESSION_TIMEOUT_HOURS:-24}
@@ -73,7 +73,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/mcp/"]
+      test: ["CMD", "curl", "-f", "http://localhost:${MCP_SERVER_PORT:-8000}/mcp/"]
       interval: 30s
       timeout: 10s
       retries: 3
