--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,13 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
+# Add metadata
+LABEL org.opencontainers.image.title="MCP RAG Server"
+LABEL org.opencontainers.image.description="Production-ready MCP RAG Server with advanced AI reasoning, memory management, and comprehensive MCP integration"
+LABEL org.opencontainers.image.vendor="Design4Pro"
+LABEL org.opencontainers.image.source="https://github.com/design4pro/mcp-rag-server"
+LABEL org.opencontainers.image.licenses="MIT"
+
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
   curl \
@@ -17,6 +24,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy source code
 COPY src/ ./src/
 COPY src/run_server_http.py ./run_server_http.py
+COPY src/run_server.py ./run_server.py
 COPY .env .
 
 # Create directory for mem0 data
@@ -29,5 +37,5 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:${MCP_SERVER_PORT:-8000}/mcp/ || exit 1
 
-# Run the server
-CMD ["python", "run_server_http.py"] 
+# Run the server (use run_server.py for stdio communication)
+CMD ["python", "run_server.py"] 
