chore: remove deprecated environment and configuration files
- Delete obsolete .env.backup, .env.example.backup, and .env.example.backup2 files
- Remove unused .cursor/mcp.json and .cursor/rules/derived-cursor-rules.mdc files
- Eliminate deployment scripts and service files to streamline project structure
- Update .gitignore to exclude removed files and ensure cleaner repository management

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ MANIFEST
 
 # Virtual environments
 .env
+.env.backup
 .venv
 env/
 venv/
@@ -92,6 +93,6 @@ dmypy.json
 .specstory/
 
 # Cursor IDE
-.cursor/
 .cursorindexingignore
 .cursorignore
+.cursor
