feat: Complete test suite and add advanced features
- Fix critical memory service bug in add_memory() method
- Add missing server method aliases (initialize_services, cleanup_services)
- Fix configuration compatibility issues in test files
- Add comprehensive test environment setup
- Achieve 100% test pass rate (256 tests passing, 0 failures)

New Features:
- Add code analysis service with language detection and metrics
- Add HTTP integration tools for web content fetching
- Add advanced features with streaming and batch processing
- Add comprehensive test coverage for all new services

Documentation:
- Update all documentation with latest changes
- Add Phase 7 documentation for code analysis capabilities
- Add examples for new features
- Update troubleshooting guide

Testing:
- Add 30 new unit tests for advanced features
- Add 15 new unit tests for code analysis service
- Add 9 new unit tests for HTTP tools
- Fix all integration test issues

Configuration:
- Update pyproject.toml and requirements.txt
- Fix server configuration compatibility
- Add proper environment variable handling

All tests now passing: 256/256 ✅

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
-    {name = "MCP RAG Team", email = "team@mcp-rag.dev"}
+    {name = "DESIGN4PRO", email = "mcp-rag-server@design4.pro"}
 ]
 keywords = ["mcp", "rag", "qdrant", "mem0", "gemini", "ai", "reasoning", "memory", "vector-search"]
 classifiers = [
@@ -29,10 +29,9 @@ classifiers = [
 ]
 
 dependencies = [
-    "mcp[cli]>=1.0.0",
-    "qdrant-client>=1.7.0",
-    "mem0ai>=0.1.0",
-    "google-genai>=0.3.0",
+            "fastmcp>=2.10.6",
+            "qdrant-client>=1.7.0",
+        "google-genai>=0.3.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "python-dotenv>=1.0.0",
@@ -60,10 +59,10 @@ dev = [
 mcp-rag-server = "mcp_rag_server.server:main"
 
 [project.urls]
-Homepage = "https://github.com/your-org/mcp-rag-server"
-Documentation = "https://github.com/your-org/mcp-rag-server/docs"
-Repository = "https://github.com/your-org/mcp-rag-server.git"
-Issues = "https://github.com/your-org/mcp-rag-server/issues"
+Homepage = "https://github.com/design4pro/mcp-rag-server"
+Documentation = "https://github.com/design4pro/mcp-rag-server/docs"
+Repository = "https://github.com/design4pro/mcp-rag-server.git"
+Issues = "https://github.com/design4pro/mcp-rag-server/issues"
 
 [tool.black]
 line-length = 88
