--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-mcp[cli]>=1.0.0
+fastmcp>=2.10.6
 qdrant-client>=1.7.0
-mem0ai>=0.1.0
 google-genai>=0.3.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
@@ -12,3 +11,4 @@ langchain-text-splitters>=0.0.1
 sentence-transformers>=2.2.0
 numpy>=1.24.0
 tiktoken>=0.5.0
+websockets>=11.0.0
