fix: resolve Docker image startup issue with run_server.py
- Copy run_server.py and run_server_http.py to /app/ directory in Dockerfile
- Fix Python path configuration for server startup
- Add comment explaining the path structure
- Verify server starts correctly with STDIO communication
- Update documentation to reflect successful server startup testing

Fixes the 'No such file or directory' error when running MCP tools with the optimized Docker image.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -45,6 +45,10 @@ COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/pytho
 # Copy source code
 COPY src/ ./src/
 
+# Copy server entry points
+COPY src/run_server.py ./run_server.py
+COPY src/run_server_http.py ./run_server_http.py
+
 # Add src to Python path
 ENV PYTHONPATH=/app/src
 
